--- a/backoffice/src/app/profile/profile.component.html
+++ b/backoffice/src/app/profile/profile.component.html
@@ -6,30 +6,32 @@
     <img  src="../../assets/profile_placeholder.png" alt="profile-placeholder">
   </div>
   <mat-card-content class="profileContent">
-    <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="profileForm" (ngSubmit)="onSubmit()">
 
-      <mat-form-field appearance="fill">
+      <mat-form-field class="input" appearance="fill">
         <mat-label for="username">Username</mat-label>
-        <input matInput id="username" type="text" formControlName="username" required>
+        <input matInput id="username" type="text" formControlName="username">
+        <mat-error *ngIf="formErrors.username">{{formErrors.username}}</mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field class="input" appearance="fill">
         <mat-label for="email">Email</mat-label>
-        <input matInput id="email" type="text" formControlName="email" required>
+        <input matInput id="email" type="text" formControlName="email">
+        <mat-error *ngIf="formErrors.email">{{formErrors.email}}</mat-error>
       </mat-form-field>
 
-      <label>Gender: </label>
       <mat-radio-group formControlName="gender">
+        <mat-label for="gender">Gender: </mat-label>
         <mat-radio-button value="male">Male</mat-radio-button>
         <mat-radio-button value="female">Female</mat-radio-button>
       </mat-radio-group>
 
-      <mat-form-field appearance="fill">
+      <mat-form-field class="textarea" appearance="fill">
         <mat-label>Bio</mat-label>
         <textarea matInput id="bio" type="textarea" formControlName="bio"></textarea>
       </mat-form-field>
 
-      <button type="submit" [disabled]="!profileForm.valid">Submit</button>
+      <button type="submit">Submit</button>
 
     </form>
   </mat-card-content>
