--- a/backoffice/src/app/app.component.html
+++ b/backoffice/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-fluid appContainer">
   <div class="row">
     <div class="col-12 col-md-6 profileCol">
