--- a/backoffice/src/app/img-dialog/img-dialog.component.html
+++ b/backoffice/src/app/img-dialog/img-dialog.component.html
@@ -1,10 +1,9 @@
 <div class="container-fluid">
   <form [formGroup]="fileUploadForm" (ngSubmit)="submit()">
-          <h6><span>Select Image File</span></h6>
-          <input type="file" class="custom-file-input" id="customFile" name="uploadedImage" 
-            (change)="readFile($event)" #UploadFileInput>
-          <label class="custom-file-label" for="customFile">{{fileInputLabel || 'Choose File'}}</label>
-          <p for="customFile" *ngIf="errorMsg">{{errorMsg}}</p>
-      <button [disabled]="!validFile" [mat-dialog-close]="data.file" class="btn btn-primary" type="submit">Upload</button>
+    <h6><span>Select Image File</span></h6>
+    <input type="file" class="custom-file-input" id="customFile" name="uploadedImage" (change)="readFile($event)" #UploadFileInput>
+    <label class="custom-file-label" for="customFile">{{fileInputLabel || 'Choose File'}}</label>
+    <p for="customFile" *ngIf="errorMsg">{{errorMsg}}</p>
+    <button [disabled]="!validFile" [mat-dialog-close]="data.file" class="btn btn-primary" type="submit">Upload</button>
   </form>
 </div>
